--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "connect": "^3.6.6",
     "server-static": "^2.0.5",
+    "sha3": "^1.2.2",
     "truffle": "^4.1.14",
     "windows-build-tools": "^3.1.0"
   }
