--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sha3": "^1.2.2",
     "truffle": "4.0.7",
     "truffle-hdwallet-provider": "0.0.6",
-    "truffle-hdwallet-provider-privkey": "^0.3.0"
+    "truffle-hdwallet-provider-privkey": "^0.3.0",
+    "web3": "^1.0.0-beta.36"
   }
 }
