--- a/vanillaMetacoin/package.json
+++ b/vanillaMetacoin/package.json
@@ -18,6 +18,14 @@
   "homepage": "https://github.com/mitsukomegumi/b9Lab-Assignments#readme",
   "devDependencies": {
     "create-html": "^4.1.0",
-    "truffle": "^4.1.13"
+    "truffle": "^4.1.13",
+    "webpack": "^4.18.0",
+    "webpack-cli": "^3.1.0"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.2",
+    "jquery": "^3.3.1",
+    "truffle-contract": "^3.0.6",
+    "web3": "^0.20.6"
   }
 }
