--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/mitsukomegumi/B9Lab-Assignments#readme",
   "dependencies": {
     "connect": "^3.6.6",
+    "create-html": "^4.1.0",
     "scrypt": "^6.0.3",
     "sha3": "^1.2.2",
     "truffle": "^4.1.14",
