--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "Ganache",
         "Kovan",
         "Morden",
+        "Vuex",
+        "ethpaperscissors",
         "hdwallet",
         "metamask"
     ]
