Got web3injected promise value.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Kovan",
         "Morden",
         "Vuex",
+        "coinbase",
         "ethpaperscissors",
         "hdwallet",
         "metamask"
