--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "coinbase",
         "ethpaperscissors",
         "hdwallet",
-        "metamask"
+        "metamask",
+        "nonpayable"
     ]
 }
