--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/mitsukomegumi/B9Lab-Assignments#readme",
   "dependencies": {
+    "bluebird": "^3.5.2",
+    "chai": "^4.2.0",
     "connect": "^3.6.6",
     "create-html": "^4.1.0",
+    "eslint-config-airbnb": "^17.1.0",
     "scrypt": "^6.0.3",
     "sha3": "^1.2.2",
     "truffle": "^4.1.14",
