--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd RockPaperScissors && cd App && cd ethpaperscissors && npm i && npm run serve"
+    "start": "cd RockPaperScissors && cd App && cd ethpaperscissors && npm i && npm run serve",
+    "build": "cd RockPaperScissors && cd App && cd ethpaperscissors && npm i && npm run build"
   },
   "repository": {
     "type": "git",
