--- a/now.json
+++ b/now.json
@@ -1,4 +1,8 @@
 {
     "name": "B9lab-assignments",
-    "public": true
+    "public": true,
+    "type": "npm",
+    "scripts": {
+        "start": "npm i && npm run build"
+    }
 }
