--- a/RockPaperScissors/App/ethpaperscissors/package.json
+++ b/RockPaperScissors/App/ethpaperscissors/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ethereumjs-abi": "^0.6.5",
     "keccak": "^1.4.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
